Add --illegal-access=permit argument to the surefire plugin to support JAI in JDK 16